==> 8bitgeek/caribou-rtos/target/chip/gd32/gd32f303/src/uart.c <==
#include <caribou/lib/stdio.h>
#include <caribou/lib/errno.h>
#include <caribou/lib/heap.h>
#include <caribou/lib/string.h>
#include <chip/chip.h>
#include <chip/uart.h>
#include <board.h>
#define UART_INTERRUPT_MASK	(USART_INT_RBNE)
#define USART_STAT(usartx)            REG32((usartx) + (0x00000000U))   /*!< USART status register */
#define USART_DATA(usartx)            REG32((usartx) + (0x00000004U))   /*!< USART data register */
#define USART_BAUD(usartx)            REG32((usartx) + (0x00000008U))   /*!< USART baud rate register */
#define USART_CTL0(usartx)            REG32((usartx) + (0x0000000CU))   /*!< USART control register 0 */
#define USART_CTL1(usartx)            REG32((usartx) + (0x00000010U))   /*!< USART control register 1 */
#define USART_CTL2(usartx)            REG32((usartx) + (0x00000014U))   /*!< USART control register 2 */
#define USART_GP(usartx)              REG32((usartx) + (0x00000018U))   /*!< USART guard time and prescaler register */

int chip_uart_int_enable(void* device)
{
	int rc = chip_uart_int_enabled(device);
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	USART_CTL0(private_device->base_address) |= USART_CTL0_RBNEIE;
	return rc;
}

int chip_uart_int_disable(void* device)
{
	int rc = chip_uart_int_enabled(device);
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	USART_CTL0(private_device->base_address) &= ~USART_CTL0_RBNEIE;
	return rc;
}

int chip_uart_int_enabled(void* device)
{
	int rc;
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	/* get the interrupt enable bit status */
	rc = (USART_CTL0(private_device->base_address) & USART_CTL0_RBNEIE) ? true : false;
	return rc;
}

int chip_uart_set_config(void* device,caribou_uart_config_t* config)
{
	int rc=(-1);
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	if ( !config )
	{
		config = &private_device->config;
	}
	usart_disable(private_device->base_address);
	if ( config )
	{
		switch ( config->word_size )
		{
			default:
			case CARIBOU_UART_WORDSIZE_5:				/* Word size 5 bits */
			case CARIBOU_UART_WORDSIZE_6:				/* Word size 6 bits */
			case CARIBOU_UART_WORDSIZE_7:				/* Word size 7 bits */
			case CARIBOU_UART_WORDSIZE_8:				/* Word size 8 bits */
				usart_word_length_set(private_device->base_address,USART_WL_8BIT);
				break;
			case CARIBOU_UART_WORDSIZE_9:				/* Word size 9 bits */		
				usart_word_length_set(private_device->base_address,USART_WL_9BIT);
				break;
		}

		switch ( config->stop_bits )
		{
			case CARIBOU_UART_STOPBITS_05:
				usart_stop_bit_set(private_device->base_address,USART_STB_0_5BIT);
				break;
			default:
			case CARIBOU_UART_STOPBITS_1:
				usart_stop_bit_set(private_device->base_address,USART_STB_1BIT);
				break;
			case CARIBOU_UART_STOPBITS_15:
				usart_stop_bit_set(private_device->base_address,USART_STB_1_5BIT);
				break;
			case CARIBOU_UART_STOPBITS_2:
				usart_stop_bit_set(private_device->base_address,USART_STB_2BIT);
				break;
		}

		switch( config->parity_bits )
		{
			default:
			case CARIBOU_UART_PARITY_NONE:
				usart_parity_config(private_device->base_address,USART_PM_NONE);
				break;
			case CARIBOU_UART_PARITY_ODD:
				usart_parity_config(private_device->base_address,USART_PM_ODD);
				break;
			case CARIBOU_UART_PARITY_EVEN:
				usart_parity_config(private_device->base_address,USART_PM_EVEN);
				break;
		}

		switch( config->flow_control )
		{
			default:
			case CARIBOU_UART_FLOW_NONE:		/* no flow control */
				break;
			case CARIBOU_UART_FLOW_RTS:			/* RTS flow control */
				usart_hardware_flow_rts_config(private_device->base_address,USART_RTS_ENABLE);
				break;
			case CARIBOU_UART_FLOW_CTS:			/* CTS flow control */
				usart_hardware_flow_cts_config(private_device->base_address,USART_CTS_ENABLE);
				break;
			case CARIBOU_UART_FLOW_RTS_CTS:		/* RTS+CTS flow control */
				usart_hardware_flow_rts_config(private_device->base_address,USART_RTS_ENABLE);
				usart_hardware_flow_cts_config(private_device->base_address,USART_CTS_ENABLE);
				break;
		}

		usart_baudrate_set(private_device->base_address, config->baud_rate);
		usart_transmit_config(private_device->base_address,USART_TRANSMIT_ENABLE);
		usart_receive_config(private_device->base_address,USART_RECEIVE_ENABLE);
		usart_enable(private_device->base_address);
		caribou_vector_install(private_device->vector,caribou_uart_isr,private_device);
		caribou_vector_enable(private_device->vector);
		USART_CTL0(private_device->base_address) |= USART_CTL0_RBNEIE;
		rc=0;
	}
	return rc;
}

bool chip_uart_tx_busy(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	if ( (USART_STAT(private_device->base_address) & USART_STAT_TC))
		return false;
	return true;
}

bool chip_uart_tx_ready(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	bool rc = (USART_STAT(private_device->base_address) & USART_STAT_TBE) ? true : false;
	return rc;
}

bool chip_uart_rx_ready(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	bool rc = (USART_STAT(private_device->base_address) & USART_STAT_RBNE) ? true : false;
	return rc;
}

void chip_uart_tx_start(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	USART_CTL0(private_device->base_address) |= USART_CTL0_TBEIE;
}

void chip_uart_tx_stop(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	USART_CTL0(private_device->base_address) &= ~USART_CTL0_TBEIE;
}
